--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ autopep8==2.1.0
 barcode==1.0.4
 blinker==1.9.0
 Brotli==1.1.0
+CacheControl==0.14.2
 cachetools==5.5.2
 certifi==2024.2.2
 cffi==1.16.0
@@ -18,12 +19,15 @@ charset-normalizer==3.4.1
 click==8.1.8
 cloudinary==1.43.0
 colorama==0.4.6
+cryptography==44.0.2
 cssselect2==0.8.0
 distlib==0.3.8
 et-xmlfile==1.1.0
 fastapi==0.115.11
 filelock==3.13.3
+firebase-admin==6.7.0
 Flask==3.1.0
+flask-cors==5.0.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
@@ -34,8 +38,16 @@ google-api-python-client==2.162.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.1
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
 googleapis-common-protos==1.68.0
 greenlet==3.1.1
+grpcio==1.71.0
+grpcio-status==1.71.0
+gunicorn==23.0.0
 h11==0.14.0
 httplib2==0.22.0
 idna==3.6
@@ -46,6 +58,7 @@ Mako==1.3.9
 MarkupSafe==3.0.2
 mercadopago==2.2.3
 MouseInfo==0.1.3
+msgpack==1.1.0
 multidict==6.2.0
 mysql-connector-python==9.2.0
 oauthlib==3.2.2
